added mapping and configured the NHibernate this crap (my app) finally works

--- a/NHibernate/HelloNHibernate/HelloNHibernate/HelloNHibernate/HelloNHibernate.csproj
+++ b/NHibernate/HelloNHibernate/HelloNHibernate/HelloNHibernate/HelloNHibernate.csproj
@@ -6,7 +6,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Employee.hbm.xml" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Include="Employee.hbm.xml" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="NHibernate" Version="5.3.10" />
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.3" />
   </ItemGroup>
 
 </Project>
